[package]
name = "swaperooni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swaperooni"
path = "src/lib.rs"

[[bin]]
name = "swaperooni"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
clap = { version = "4.4.11", features = ["derive", "env"] }
signal-hook = "0.3.17"
thiserror = "1.0.51"
tokio = { version = "1", features = ["full"] }

# https://insta.rs/docs/quickstart/
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1
