[package]
name = "swaperooni"
version = "0.1.0"
edition = "2021"
exclude = ["img/", "examples/", ".github/", "renovate.json"]
authors = ["cdaringe<cdaringe@gmail.com>"]
description = "Hot-reload child process in response to user provided events. Proxies signals into the child process."
repository = "https://github.com/cdaringe/swaperooni"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swaperooni"
path = "src/lib.rs"

[[bin]]
name = "swaperooni"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.5.0", features = ["derive", "env"] }
scopeguard = "1.2.0"
signal-hook = "0.3.17"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1
