[package]
name = "swaperooni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swaperooni"
path = "src/lib.rs"

[[bin]]
name = "swaperooni"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
signal-hook = "0.3.17"
